feat(i18n): add auto summary feature strings for multiple locales
- Add new translation strings for auto summary feature in bg, de, el, eo, es, fr, hr, hu, it, pl, pt-br, pt, ro, sk, and sv locales
- Include preference options, title, status messages, and prompt templates
- Remove unnecessary description fields from existing strings

--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -199,5 +199,23 @@
     },
     "prefs_google_gemini_thinking_budget": {
         "message": "Бюджет за мислене"
+    },
+    "prefs_OptionText_auto_summary": {
+        "message": "Показване на автоматично AI резюме за прегледи на съобщения"
+    },
+    "prefs_OptionText_auto_summary_Info": {
+        "message": "Ако е отметнато, ThunderAI автоматично ще генерира и показва AI резюмета над е-пощта, когато те бъдат отворени. Имайте предвид, че това означава, че всички съобщения, които преглеждате, ще бъдат незабавно изпратени до конфигурираната AI услуга."
+    },
+    "auto_summary_title": {
+        "message": "ThunderAI Резюме"
+    },
+    "auto_summary_generating": {
+        "message": "Генериране на AI резюме..."
+    },
+    "auto_summary_failed": {
+        "message": "Неуспешно генериране на AI резюме. Моля, потвърдете настройките си и опитайте отново."
+    },
+    "auto_summary_prompt": {
+        "message": "Моля, предоставете кратко резюме на следващото съобщение. Резюмето трябва да бъде максимум 3-5 изречения и да обхваща основните точки:\n\n"
     }
-}
+  }
