--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -1341,5 +1341,17 @@
     },
     "prefs_OptionText_auto_summary_Info": {
         "message": "Si coché, ThunderAI générera et affichera automatiquement des résumés par IA au-dessus des messages lorsque vous les ouvrirez. Notez que cela signifie que tous les messages que vous prévisualisez seront immédiatement envoyés au service IA configuré."
+    },
+    "auto_summary_title": {
+        "message": "Résumé ThunderAI"
+    },
+    "auto_summary_generating": {
+        "message": "Génération du résumé IA..."
+    },
+    "auto_summary_failed": {
+        "message": "Échec de la génération du résumé IA. Veuillez vérifier vos paramètres et réessayer."
+    },
+    "auto_summary_prompt": {
+        "message": "Veuillez fournir un résumé concis du message suivant. Le résumé doit comporter au maximum 3 à 5 phrases et capturer les points principaux :\n\n"
     }
 }
