--- a/_locales/el/messages.json
+++ b/_locales/el/messages.json
@@ -773,10 +773,10 @@
     "Report_Date": {
         "message": "Ημερομηνία αναφοράς"
     },
-    "yes_string": {
+    "spamfilter_moved": {
         "message": "Ναί"
     },
-    "no_string": {
+    "spamfilter_not_moved": {
         "message": "Οχι"
     },
     "context_menu_mzta-add-tags": {
@@ -784,6 +784,18 @@
     },
     "context_menu_mzta-spamfilter": {
         "message": "Ανάλυση για ανεπιθύμητα μηνύματα"
+    },
+    "prefs_OptionText_add_tags_context_menu": {
+        "message": "Εμφάνιση του στοιχείου μενού \"Προσθήκη ετικετών\""
+    },
+    "prefs_OptionText_add_tags_context_menu_Info": {
+        "message": "Εάν είναι επιλεγμένο, το στοιχείο μενού \"Προσθήκη ετικετών\" θα εμφανίζεται όταν κάνετε δεξί κλικ σε ένα μήνυμα ηλεκτρονικού ταχυδρομείου στη λίστα μηνυμάτων."
+    },
+    "prefs_OptionText_spamfilter_context_menu": {
+        "message": "Εμφάνιση του στοιχείου μενού \"Ανάλυση για ανεπιθύμητα μηνύματα\""
+    },
+    "prefs_OptionText_spamfilter_context_menu_Info": {
+        "message": "Εάν είναι επιλεγμένο, το στοιχείο μενού \"Ανάλυση για ανεπιθύμητα μηνύματα\" θα εμφανίζεται όταν κάνετε δεξί κλικ σε ένα μήνυμα ηλεκτρονικού ταχυδρομείου στη λίστα μηνυμάτων."
     },
     "noActiveCalendar": {
         "message": "Δεν βρέθηκε επεξεργάσιμο ημερολόγιο!"
@@ -823,6 +835,12 @@
     },
     "CORS_alternative_1": {
         "message": "Προβλήματα με τη ρύθμιση του CORS;"
+    },
+    "CORS_alternative_2": {
+        "message": "Πατήστε το παρακάτω κουμπί για να δώσετε στο <all_urls> την άδεια να αποφύγει οποιοδήποτε πρόβλημα CORS."
+    },
+    "CORS_give_allurls_perm": {
+        "message": "Δώστε άδεια σε \"όλες τις διευθύνσεις URL\""
     },
     "prefs_OptionText_composing_plain_text": {
         "message": "Σύνταξη σε απλό κείμενο"
@@ -924,7 +942,7 @@
         "message": "ΑΠΑΙΤΕΙΤΑΙ. Μην αλλάξετε αυτήν την τιμή εκτός αν γνωρίζετε τι κάνετε. Περισσότερες πληροφορίες στη διεύθυνση:"
     },
     "prefs_OptionText_anthropic_max_tokens": {
-        "message": "Μέγιστα Tokens"
+        "message": "Claude Μέγιστα Tokens"
     },
     "prefs_OptionText_anthropic_max_tokens_Info": {
         "message": "Ο μέγιστος αριθμός διακριτικών που θα δημιουργηθούν κατά την ολοκλήρωση. Ο αριθμός διακριτικών της προτροπής σας συν το max_tokens δεν μπορεί να υπερβαίνει το μήκος περιβάλλοντος του μοντέλου."
@@ -1260,31 +1278,22 @@
     "Optional_Permission_Denied_Model_Fetching": {
         "message": "Έχετε αρνηθεί την προαιρετική άδεια που απαιτείται για την τοποθέτηση μοντέλων για αυτήν την ενσωμάτωση."
     },
-    "reset": {
-        "message": "Επαναφορά"
+    "prefs_OptionText_auto_summary": {
+        "message": "Ενεργοποίηση αυτόματου AI περιλήψεων για προεπισκόπηση μηνυμάτων"
     },
-    "prompt_string": {
-        "message": "Εντολή"
+    "prefs_OptionText_auto_summary_Info": {
+        "message": "Εάν είναι επιλεγμένο, το ThunderAI θα δημιουργεί και θα εμφανίζει αυτόματα AI περιλήψεις πάνω από τα μηνύματα ηλεκτρονικού ταχυδρομείου όταν ανοίγουν. Σημειώστε ότι αυτό σημαίνει ότι όλα τα μηνύματα που προεπισκοπείτε θα σταλούν αμέσως στην υπηρεσία AI που έχετε διαμορφώσει."
     },
-    "placeholder_mail_headers": {
-        "message": "Κεφαλίδες αλληλογραφίας"
+    "auto_summary_title": {
+        "message": "Περίληψη ThunderAI"
     },
-    "prefs_chatgpt_api_temperature_Info": {
-        "message": "Ποια θερμοκρασία δειγματοληψίας να χρησιμοποιηθεί, μεταξύ 0 και 2. Υψηλότερες τιμές όπως 0,8 θα κάνουν την έξοδο πιο τυχαία, ενώ χαμηλότερες τιμές όπως 0,2 θα την κάνουν πιο εστιασμένη και ντετερμινιστική."
+    "auto_summary_generating": {
+        "message": "Δημιουργία AI περίληψης..."
     },
-    "prefs_ollama_temperature_Info": {
-        "message": "Η θερμοκρασία του μοντέλου. Η αύξηση της θερμοκρασίας θα κάνει το μοντέλο να απαντά πιο δημιουργικά. Η προεπιλεγμένη τιμή είναι 0,8. Συνιστάται η χρήση τιμών μεταξύ 0 και 1."
+    "auto_summary_failed": {
+        "message": "Αποτυχία δημιουργίας AI περίληψης. Παρακαλώ ελέγξτε τις ρυθμίσεις σας και προσπαθήστε ξανά."
     },
-    "prefs_api_temperature": {
-        "message": "Θερμοκρασία"
-    },
-    "prefs_openai_comp_temperature_Info": {
-        "message": "Ποια θερμοκρασία δειγματοληψίας να χρησιμοποιηθεί, μεταξύ 0 και 2. Υψηλότερες τιμές όπως 0,8 θα κάνουν την έξοδο πιο τυχαία, ενώ χαμηλότερες τιμές όπως 0,2 θα την κάνουν πιο εστιασμένη και ντετερμινιστική."
-    },
-    "prefs_google_gemini_temperature_Info": {
-        "message": "Αυτή η παράμετρος πρέπει να είναι ένας αριθμός μεταξύ 0,0 και 2,0. Ελέγχει την τυχαιότητα της εξόδου. Η προεπιλεγμένη τιμή ποικίλλει ανάλογα με το μοντέλο. Αφήστε την κενή για να αποφύγετε τον ορισμό της παραμέτρου στην κλήση API."
-    },
-    "prefs_anthropic_temperature_Info": {
-        "message": "Ποσότητα τυχαιότητας που εισάγεται στην απόκριση. Προεπιλογή 1,0. Εύρος από 0,0 έως 1,0. Χρησιμοποιήστε θερμοκρασία πιο κοντά στο 0,0 για αναλυτική ανάλυση."
+    "auto_summary_prompt": {
+        "message": "Παρακαλώ παρέχετε μια σύντομη περίληψη του ακόλουθου μηνύματος ηλεκτρονικού ταχυδρομείου. Η περίληψη θα πρέπει να είναι το πολύ 3-5 προτάσεις και να καταγράφει τα κύρια σημεία:\n\n"
     }
-}
+  }
