--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -75,19 +75,15 @@
         "message": "Om markerad kommer ThunderAI att generera och visa AI-sammanfattningar ovanför e-postmeddelanden när de öppnas. Observera att detta innebär att alla meddelanden du förhandsgranskar kommer att skickas omedelbart till den konfigurerade AI-tjänsten."
     },
     "auto_summary_title": {
-        "message": "ThunderAI Sammanfattning",
-        "description": "Titel för den automatiska sammanfattningspanelen"
+        "message": "ThunderAI Sammanfattning"
     },
     "auto_summary_generating": {
-        "message": "Genererar AI-sammanfattning...",
-        "description": "Laddningstext som visas medan sammanfattningen genereras"
+        "message": "Genererar AI-sammanfattning..."
     },
     "auto_summary_failed": {
-        "message": "Misslyckades med att generera AI-sammanfattning. Kontrollera dina inställningar och försök igen.",
-        "description": "Felmeddelande när sammanfattningsgenereringen misslyckas"
+        "message": "Misslyckades med att generera AI-sammanfattning. Kontrollera dina inställningar och försök igen."
     },
     "auto_summary_prompt": {
-        "message": "Ge en koncis sammanfattning av följande e-postmeddelande. Sammanfattningen bör vara max 3-5 meningar och fånga huvudpunkterna:\n\n",
-        "description": "Promptmall för AI-sammanfattningsgenerering"
+        "message": "Ge en koncis sammanfattning av följande e-postmeddelande. Sammanfattningen bör vara max 3-5 meningar och fånga huvudpunkterna:\n\n"
     }
 }
