feat(i18n): add auto summary strings for cs, ru, zh_Hans, and zh_Hant locales
- Add new translation strings for auto summary feature
- Include title, generating, failed, and prompt messages
- Remove unnecessary description fields from en locale
- Add missing auto summary preference strings for zh_Hant locale

--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -1172,5 +1172,17 @@
     },
     "prefs_OptionText_auto_summary_Info": {
         "message": "Pokud je zaškrtnuto, ThunderAI automaticky vygeneruje a zobrazí AI shrnutí nad e-mailovými zprávami, když jsou otevřeny. Mějte na paměti, že to znamená, že všechny zprávy, které si prohlížíte, budou okamžitě odeslány do nakonfigurované AI služby."
+    },
+    "auto_summary_title": {
+        "message": "ThunderAI Souhrn"
+    },
+    "auto_summary_generating": {
+        "message": "Generování AI souhrnu..."
+    },
+    "auto_summary_failed": {
+        "message": "Nepodařilo se vygenerovat AI souhrn. Zkontrolujte prosím nastavení a zkuste to znovu."
+    },
+    "auto_summary_prompt": {
+        "message": "Poskytněte stručný souhrn následující e-mailové zprávy. Souhrn by měl obsahovat maximálně 3-5 vět a zachytit hlavní body:\n\n"
     }
 }
