--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -1229,5 +1229,17 @@
     },
     "prefs_OptionText_auto_summary_Info": {
         "message": "Если отмечено, резюме, сгенерированное ИИ, будет автоматически отображаться над сообщениями в просмотре."
+    },
+    "auto_summary_title": {
+        "message": "ThunderAI Резюме"
+    },
+    "auto_summary_generating": {
+        "message": "Генерация AI резюме..."
+    },
+    "auto_summary_failed": {
+        "message": "Не удалось сгенерировать AI резюме. Пожалуйста, проверьте настройки и попробуйте снова."
+    },
+    "auto_summary_prompt": {
+        "message": "Пожалуйста, предоставьте краткое резюме следующего сообщения электронной почты. Резюме должно содержать максимум 3-5 предложений и отражать основные моменты:\n\n"
     }
 }
