--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1738,21 +1738,21 @@
     "description": ""
   },
   "prefs_OptionText_auto_summary": {
-    "message": "Enable automatic AI summarization for message previews",
+    "message": "Enable automatic AI summarization for message previews"
   },
   "prefs_OptionText_auto_summary_Info": {
-      "message": "If checked, ThunderAI will automatically generate and display AI summaries above email messages when they are opened. Note that this means all messages you preview will immediately be sent to the configured AI service.",
+      "message": "If checked, ThunderAI will automatically generate and display AI summaries above email messages when they are opened. Note that this means all messages you preview will immediately be sent to the configured AI service."
   },
   "auto_summary_title": {
-      "message": "ThunderAI Summary",
+      "message": "ThunderAI Summary"
   },
   "auto_summary_generating": {
-      "message": "Generating AI summary...",
+      "message": "Generating AI summary..."
   },
   "auto_summary_failed": {
-      "message": "Failed to generate AI summary. Please confirm your settings and try again.",
+      "message": "Failed to generate AI summary. Please confirm your settings and try again."
   },
   "auto_summary_prompt": {
-      "message": "Please provide a concise summary of the following email message. The summary should be 3-5 sentences maximum and capture the main points:\n\n",
+      "message": "Please provide a concise summary of the following email message. The summary should be 3-5 sentences maximum and capture the main points:\n\n"
   }
 }
