add customizable model options for summarize

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1003,6 +1003,10 @@
     "message": "Extract all relevant details required to generate a calendar event from the following text. The extracted information should include:\n- Event Title\n- Start Date and Time (including timezone, if specified)\n- End Date and Time (including timezone, if specified)\n- Full day (if mentioned)\n- Attendees\nEnsure the data is formatted clearly and consistently so that it can be directly used for creating a calendar event.\nIf there are relative time references, consider that the date and time of the email are \"{%mail_datetime%}\". Calculate the start date and time based on this reference. If the calculated start date and time are earlier than \"{%current_datetime%}\", recalculate the start date and time using \"{%current_datetime%}\" as the base.\nIf the duration is not specified, set it to one hour.\nThese are the attendees: {%author%}, {%recipients%}, {%cc_list%}. If present, exclude my address: {%account_email_address%}.\nIf you're not able to get one or more of the required information, please respond with an empty string.\nGenerate a response in JSON format only. Do not include any additional text or explanations; provide only the JSON. Here is the format to be used:\n{\n\"startDate\": \"YYYYMMDDTHHMMSS\",\n\"endDate\": \"YYYYMMDDTHHMMSS\",\n\"summary\": \"Calendar event summary here\",\n\"forceAllDay\": false,\n\"attendees\": [attendee1@example.com,attendee2@example.com,attendee3@example.com]\n}\nHere's the text:\"{%selected_text%}\"",
     "description": ""
   },
+  "Summarize_prompt_prefs_title": {
+    "message": "Add Summarization Options",
+    "description": ""
+  },
   "prompt_summarize": {
     "message": "Summarize this email or these emails",
     "description": ""
@@ -1213,6 +1217,10 @@
   },
   "prefs_OptionText_summarize": {
     "message": "Summarize mail",
+    "description": ""
+  },
+  "prefs_OptionText_summarize_use_specific_integration_Info": {
+    "message": "If checked, the Model and API specified below will be used for summarizing email(s), regardless the one choosen in the ThunderAI options page.",
     "description": ""
   },
   "prefs_OptionText_summarize_Info": {
